# studyguru-server

./: .env.example  .gitignore  CACHING_IMPLEMENTATION_GUIDE.md  CACHING_IMPLEMENTATION_SUMMARY.md  CROSS_MODEL_COMPATIBILITY_SUMMARY.md  DEPLOYMENT_SERVER_CONFIG.md  DEPLOY_SCRIPT_GUIDE.md  GEMINI_IMPLEMENTATION_SUMMARY.md  GEMINI_INTEGRATION_GUIDE.md  GEMINI_QUICK_REFERENCE.md  GUARDRAIL_FIX_SUMMARY.md  INTERACTION_IMPROVEMENTS.md  LANGCHAIN_IMPLEMENTATION.md  LANGCHAIN_MIGRATION_SUMMARY.md  LANGGRAPH_IMPLEMENTATION_GUIDE.md  LANGGRAPH_IMPLEMENTATION_SUMMARY.md  MYSQL_SETUP.md  RAG_SYSTEM_EXPLANATION.md  RATE_LIMITING_QUICKSTART.md  README.md  REAL_TIME_NOTIFICATIONS.md  REDIS_PRODUCTION_SETUP.md  REDIS_SETUP_GUIDE.md  SINGLE_COLLECTION_OPTIMIZATION.md  STREAMING_API_GUIDE.md  STREAMING_USAGE_EXAMPLES.md  THINKING_STATUS_IMPLEMENTATION.md  WEB_SEARCH_IMPLEMENTATION.md  ZILLIZ_SETUP_GUIDE.md  alembic.ini  debug_config.py  deploy.sh  env.production.example  example_web_search_usage.py  gunicorn_config.py  manage_vector_collections.py  pyproject.toml  test_basic.py  test_context_testing_framework.py  test_document_integration.py  (+7 more)
alembic/: env.py
alembic/versions/: 001_initial_migration.py  4474dedb0209_add_context_tables_for_enhanced_rag_.py  4b026e1c4eee_init.py  53b9d94b22f9_add_semantic_summary_to_interaction.py  71fae022759e_fix_conversation_foreign_key_constraint.py  8e26c845b53c_add_like_dislike_columns_to_conversation.py  9f9237aceffb_init.py  a1b2c3d4e5f6_add_rbac_tables_and_last_login_details.py  adac31edf2bb_init.py  add_goals_tables.py  add_guest_account_type.py  add_notes_table.py  add_pin_and_clone_tables.py  c10495cfc328_init.py  f14667ebad31_init.py  streamline_rag_system.py
app/: main.py
app/api/: app_routes.py  interaction_routes.py  routes.py  sse_routes.py  webhook.py  websocket_routes.py
app/config/: model_config.py  (+3 more)
systemd/: studyguru.service
test/: README.md  gemini_test.py  run_all_tests.py  test_basic.py  test_caching_implementation.py  test_context_testing_framework.py  test_document_integration.py  test_gemini_integration.py  test_gpt_5_raw.py  test_langchain.py  test_performance_monitoring.py  test_rate_limiting.py  test_real_time_context.py  test_serper_api.py  test_streaming_client.py  test_vector_db.py  test_vector_optimization.py
(+80 files in other folders)
