[project]
name = "studyguru-pro"
version = "1.0.0"
description = "StudyGuru Pro - AI-powered study assistant"
authors = [
    {name = "StudyGuru Team", email = "team@studyguru.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "strawberry-graphql[fastapi]==0.216.1",
    "graphql-core==3.2.3",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "asyncmy>=0.2.8",
    "greenlet>=3.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.8.0",
    "google-auth>=2.23.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "aiofiles>=23.2.1",
    "pillow>=10.1.0",
    "openai>=1.3.0",
    "paddle-python-sdk>=1.0.0",
    "python-crontab>=3.0.0",
    "emails>=0.6",
    "jinja2>=3.1.2",
    "httpx>=0.25.0",
    "stripe>=12.4.0",
    "python-dotenv>=1.1.1",
    "pymilvus>=2.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
